fix character bubble on small screens

--- a/src/components/characters/index.scss
+++ b/src/components/characters/index.scss
@@ -1,7 +1,7 @@
 .character-bubble {
     position: absolute;
     z-index: 999;
-    bottom: 2%;
+    bottom: 5%;
     width: 100%;
     height: 75%;
     pointer-events: none;
